chore: config swagger
